<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="407dp"
        android:layout_height="247dp"
        android:layout_marginBottom="484dp"
        android:background="@drawable/background"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentuser"
        android:layout_width="411dp"
        android:layout_height="516dp"
        android:background="@drawable/rectangle"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="350dp"
            android:layout_height="196dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/radius"
            android:padding="@dimen/contentpd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="196dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/radius"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mgborder"
                android:layout_marginRight="@dimen/mgborder">

                <ImageView
                    style="@style/IconStyle"
                    android:src="@drawable/downloadicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bookSavedOffline"
                    android:textSize="@dimen/nameSize"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mgborder"
                android:layout_marginRight="@dimen/mgborder">

                <ImageView
                    style="@style/IconStyle"
                    android:src="@drawable/donateicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/donate"
                    android:textSize="@dimen/nameSize"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mgborder"
                android:layout_marginRight="@dimen/mgborder">

                <ImageView
                    style="@style/IconStyle"
                    android:src="@drawable/infoicon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textSize="@dimen/nameSize"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/mgborder"
                android:layout_marginRight="@dimen/mgborder">

                <ImageView
                    style="@style/IconStyle"
                    android:src="@drawable/askicon"
                    tools:ignore="VisualLintBounds" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/ask"
                    android:textSize="@dimen/nameSize"
                    tools:ignore="SpUsage,TextSizeCheck" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            style="@style/BottomNavigationIconStyle"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@drawable/navbottombackground"
            app:labelVisibilityMode="unlabeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_navigation_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="363dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Account"
                android:textColor="#4A148C"
                android:textSize="@dimen/AccountSize"
                tools:ignore="SpUsage" />

            <View
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/setting"
                style="@style/IconStyle"
                android:src="@drawable/settingicon"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pdtop">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_account_circle_24" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/pdtop"
                android:gravity="center"
                android:text="@string/UserName"
                android:textSize="@dimen/contentSize"
                tools:ignore="SpUsage" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/contentuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>