<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BookDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerDetailBook"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@drawable/navbottombackground"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_marginLeft="@dimen/mgborder"
            android:id="@+id/backButton"
            style="@style/IconStyle"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/downloadButton"
            style="@style/IconStyle"
            android:src="@drawable/downloadicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/threeDotsButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_marginRight="@dimen/mgborder"
            android:id="@+id/threeDotsButton"
            style="@style/IconStyle"
            android:src="@drawable/threedotsicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgDetailBook"
        style="@style/imgDetailBook"
        android:src="@drawable/broom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerDetailBook" />

    <TextView
        android:id="@+id/headTextDetailBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tiêu đề"
        android:textSize="@dimen/nameSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDetailBook" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/likedissaveDetail"
        app:layout_constraintTop_toBottomOf="@+id/headTextDetailBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginLeft="@dimen/pdtop"
            android:id="@+id/likeDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/IconDetailLike"
                android:src="@drawable/likeicon" />

            <TextView
                android:textSize="@dimen/nameSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/likeDetail"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:padding="@dimen/pdfiximg"
                style="@style/IconDetailLike"
                android:src="@drawable/dislikeicon" />

            <TextView
                android:textSize="@dimen/nameSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:padding="@dimen/contentpd"
                style="@style/IconDetailLike"
                android:src="@drawable/saveicon" />

            <TextView
                android:textSize="@dimen/nameSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/readafter" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/discribeDetailhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descibe"
        android:textSize="@dimen/sizecontenttext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/likedissaveDetail" />


    <ScrollView
        android:id="@+id/scrvDetail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sizeSCRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discribeDetailhead">

        <TextView
            android:id="@+id/contentdiscribeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descibe"
            android:textSize="@dimen/sizecontenttext" />
    </ScrollView>

    <Button
        android:id="@+id/btnstartreadDetail"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startRead"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrvDetail" />


</androidx.constraintlayout.widget.ConstraintLayout>
